Fix a bug in add calendar suite.
Mostly javadoc - 

./ant javadoc 

will generate linked javadoc for all projects in the bedework docs directory

--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,7 @@
 -->
 
 <project name="rpiutil" default="build">
+  <property environment="env"/>
   <property name="base.name" value="rpiutil"/>
   <dirname property="this.dir" file="${ant.file}"/>
 
@@ -155,11 +156,12 @@
        ================================================================= -->
   <target name="javadoc" depends="init"
           description="Create Javadoc API documentation">
-    <mkdir dir="${dist.home}/docs/api"/>
+    <property name="destdir" location="${dist.home}/docs/api"/>
+    <mkdir dir="${destdir}"/>
 
     <javadoc sourcepath="${source.home}"
            classpathref="compile.classpath"
-                destdir="${dist.home}/docs/api"
+                destdir="${destdir}"
            packagenames="edu.rpi.*"
                  access="public"
                  author="true"
@@ -168,6 +170,7 @@
             windowtitle="${project.name} ${project.version} API Documentation">
       <doctitle><![CDATA[${project.name} ${project.version}<br/>API Documentation]]></doctitle>
       <header><![CDATA[${project.name} ${project.version}<br/>API Documentation]]></header>
+      <link href="${env.JAVA_HOME}/docs/api" />
     </javadoc>
   </target>
 
