Finish off rpiutil build changes - delete the lib directory, update the getjar macro

--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,7 @@
   <property name="project.version" value="${edu.rpi.cmt.version}"/>
 
   <target name="init">
+    <delete dir="${lib.dir}" />
     <mkdir dir="${lib.dir}" />
 
     <getJar name="avalon" />
