--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
     <mkdir dir="${lib.dir}" />
 
     <getJar name="avalon" />
+    <getJar name="commons-codec" version="1.3" />
     <getJar name="fop" />
     <getJar name="jtidy" />
     <getJar name="junit" version="4.4" />
