--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,9 @@
   <property file="${project.home}/build.properties" />
   <property name="build.dir" location="${project.home}/build"/>
 
+  <property name="org.bedework.libcache.dir"
+            location="${project.home}/libcache"/>
+
   <import file="${build.dir}/getJar.xml"/>
 
   <property name="source.home" location="${project.home}/src"/>
