--- a/build.xml
+++ b/build.xml
@@ -59,7 +59,8 @@
     <fileset id="empty.fileset" dir="${edu.rpi.cmt.empty.dir}" excludes="*" />
 
     <!-- default to empty -->
-    <fileset id="base.resource.files" refid="empty.fileset" />
+    <fileset id="buildjar.resource.files" refid="empty.fileset" />
+    <fileset id="buildjar.generated.java.sources" refid="empty.fileset" />
 
     <property name="generated.jar.file"
               location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-${project.version}.jar" />
@@ -125,7 +126,7 @@
   <target name="build-source">
     <!-- ==================== Sources and classes ====================== -->
 
-    <fileset id="base.java.sources" dir="${source.home}" >
+    <fileset id="buildjar.java.sources" dir="${source.home}" >
       <include name="edu/rpi/**/*.java"/>
       <exclude name="edu/rpi/**/*Test.java"/>
     </fileset>
@@ -149,7 +150,7 @@
   <target name="build-test">
     <!-- ==================== Sources and classes ====================== -->
 
-    <fileset id="base.java.sources" dir="${source.home}" >
+    <fileset id="buildjar.java.sources" dir="${source.home}" >
       <include name="edu/rpi/**/*Test.java"/>
     </fileset>
 
