--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
     <getJar name="avalon" />
     <getJar name="commons-codec" version="1.3" />
     <getJar name="fop" />
+    <getJar name="ical4j" version="head-dev" />
     <getJar name="jtidy" />
     <getJar name="junit" version="4.4" />
     <getJar name="log4j" version="1.2.8" />
