--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,8 @@
     <getJar name="avalon" />
     <getJar name="commons-codec" version="1.3" />
     <getJar name="commons-httpclient" version="3.0" />
+    <getJar name="derby" version="10.5.3.0" />
+    <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
     <getJar name="ical4j" version="head-dev" />
     <getJar name="jtidy" />
