--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
     <getJar name="derby" version="10.5.3.0" />
     <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
+    <getJar name="h2" version="1.2.130" />
     <getJar name="ical4j" version="head-dev" />
     <getJar name="jtidy" />
     <getJar name="junit" version="4.4" />
