Update to latest version of ical4j + some local changes.
Exposed a bug in SysIntfReader. 
Use ical4j calculateRecurrenceSet instead of copied and modified code.
Added a copy of ical4j CalendarBuilder to allow bedework handling of timezones

More fixes to recurrences - especially all day. Recurrenceids are stored incorrectly. Will take a schema change and dump/restore to fix them. Leave till 3.7 really does branch out. Applied a temp patch to make things better.

Fixed a small bug that showed up in the collections cache.

Minor change to ChangeTable to try to fix some discrepencies with attendees - not working. Also supress checking of recurring fields for overrides.

Bit of refactoring of scheduling code - moved organizer specific code into OrganizerSchedulingHandler

--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
     <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
     <getJar name="h2" version="1.2.130" />
-    <getJar name="ical4j" version="head-dev" />
+    <getJar name="ical4j" version="head-20100601" />
     <getJar name="jtidy" />
     <getJar name="junit" version="4.4" />
     <getJar name="log4j" version="1.2.8" />
