--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
     <getJar name="derby" version="10.5.3.0" />
     <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
+    <getJar name="hibernate" version="3.3.1.ga" />
     <getJar name="h2" version="1.2.130" />
     <getJar name="ical4j" version="head-20100601" />
     <getJar name="jtidy" />
