Remove definition of property "base.name" from (almost) every build file. Was not used. Stop defining, creating and copying to libapi. Wasn't in use.
Remove build directory from every project and use the build files in the main bedework project. improves consistency and maintainability. Also allowed some bugs to be fixed.

Allow setting of message level during build and set it at quiet. Allows error messages to be more obvious.

Create macro to handle the common property definitions. Reduces size and complexity of build files.

Add a build-jar macro. Removes need for build files for sub-modules. Partway through converting to use that.

--- a/build.xml
+++ b/build.xml
@@ -10,29 +10,38 @@
 
 <project name="rpiutil" default="build">
   <property environment="env"/>
-  <property name="base.name" value="rpiutil"/>
   <dirname property="project.home" file="${ant.file}"/>
+  
+  <property name="bedework.home"
+            location="${project.home}/../.." />
 
   <property file="${project.home}/build.properties" />
-  <property name="build.dir" location="${project.home}/build"/>
 
   <property name="org.bedework.libcache.dir"
             location="${project.home}/libcache"/>
 
-  <import file="${build.dir}/getJar.xml"/>
-
   <property name="source.home" location="${project.home}/src"/>
   <property name="dist.home" location="${project.home}/dist"/>
   <property name="lib.dir" location="${project.home}/lib"/>
-  <property name="libapi.dir" location="${project.home}/libapi"/>
 
-  <property name="build.dir" location="${project.home}/build"/>
+  <property name="build.dir" location="${bedework.home}/build/buildTools"/>
   <property name="buildjar" location="${build.dir}/buildjar.xml"/>
+
+  <import file="${build.dir}/getJar.xml"/>
 
   <property name="project.name" value="${edu.rpi.cmt.package.name}"/>
   <property name="project.version" value="${org.bedework.rpiutil.version}"/>
 
   <target name="init">
+    <if>
+      <not>
+        <istrue value="${org.bedework.build.silent}" />
+      </not>
+      <then>
+        <echo message="* =========== Building ${project.name}" />
+      </then>
+    </if>
+    
     <delete dir="${lib.dir}" />
     <mkdir dir="${lib.dir}" />
 
@@ -101,7 +110,6 @@
        ================================================================= -->
   <target name="clean">
     <delete dir="${dist.home}" />
-    <delete dir="${libapi.dir}" />
   </target>
 
   <!-- =================================================================
@@ -146,10 +154,6 @@
       <property name="build.jar.file"
                 location="${generated.jar.file}" />
     </ant>
-
-    <mkdir dir="${libapi.dir}" />
-
-    <copy todir="${libapi.dir}" file="${generated.jar.file}" />
   </target>
 
   <target name="build-test">
