Bring all the sub-project builds into line for trunk and 3.7.
Added some default targets to the buildtools deftasks file allowing simplification of all build files

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@
 #
 
 # Name of this package
-edu.rpi.cmt.package.name=RPI utility package
+org.bedework.package.name=RPI utility package
 
 # Version we are building
 org.bedework.rpiutil.version=3.7
