--- a/build.xml
+++ b/build.xml
@@ -5,45 +5,30 @@
      The target of interest is build which should leave a jar file
      in the dist directory..
 
-     Authors: Mike Douglass   douglm@rpi.edu
+     Authors: Mike Douglass   douglm rpi.edu
 -->
 
 <project name="rpiutil" default="build">
   <property environment="env"/>
   <dirname property="project.home" file="${ant.file}"/>
+
+  <property file="${project.home}/build.properties" />
   
   <property name="bedework.home"
             location="${project.home}/../.." />
 
-  <property file="${project.home}/build.properties" />
+  <property name="build.dir" location="${bedework.home}/build"/>
 
-  <property name="org.bedework.libcache.dir"
-            location="${project.home}/libcache"/>
+  <import file="${build.dir}/buildTools/deftasks.xml"/>
 
-  <property name="source.home" location="${project.home}/src"/>
-  <property name="dist.home" location="${project.home}/dist"/>
-  <property name="lib.dir" location="${project.home}/lib"/>
+  <deftasks/>
 
-  <property name="build.dir" location="${bedework.home}/build/buildTools"/>
-  <property name="buildjar" location="${build.dir}/buildjar.xml"/>
-
-  <import file="${build.dir}/getJar.xml"/>
-
-  <property name="project.name" value="${edu.rpi.cmt.package.name}"/>
-  <property name="project.version" value="${org.bedework.rpiutil.version}"/>
+  <projectDefs name="${org.bedework.package.name}"
+               version="${org.bedework.rpiutil.version}" 
+               subproject="true" />
 
   <target name="init">
-    <if>
-      <not>
-        <istrue value="${org.bedework.build.silent}" />
-      </not>
-      <then>
-        <echo message="* =========== Building ${project.name}" />
-      </then>
-    </if>
-    
-    <delete dir="${lib.dir}" />
-    <mkdir dir="${lib.dir}" />
+    <projectInit/>
 
     <getJar name="commons-codec" version="1.3" />
     <getJar name="commons-httpclient" version="3.0" />
@@ -61,118 +46,24 @@
     <getJar name="servletapi" version="2.4" />
     <getJar name="struts" version="1.2.9" />
 
-    <mkdir dir="${dist.home}" />
-
-    <property name="test.data.dir"
-              location="${dist.home}/test-data" />
-
-    <property name="edu.rpi.cmt.empty.dir"
-              location="${dist.home}/empty-dir" />
-    <mkdir dir="${edu.rpi.cmt.empty.dir}" />
-
-    <fileset id="empty.fileset" dir="${edu.rpi.cmt.empty.dir}" excludes="*" />
-
-    <!-- default to empty -->
-    <fileset id="buildjar.resource.files" refid="empty.fileset" />
-    <fileset id="buildjar.generated.java.sources" refid="empty.fileset" />
+    <property name="org.bedework.rpiutil.base" location="${project.home}" />
+    <property name="org.bedework.rpiutiltests.base" location="${project.home}/tests" />
 
     <property name="generated.jar.file"
               location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-${project.version}.jar" />
 
     <property name="test.jar.file"
               location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-test-${project.version}.jar" />
-
-    <!-- ==================== Compilation Classpath ==================== -->
-
-    <path id="compile.classpath">
-      <fileset dir="${lib.dir}">
-         <include name="*.jar"/>
-      </fileset>
-      <fileset dir="${dist.home}">
-         <include name="*.jar"/>
-      </fileset>
-    </path>
   </target>
-
-  <!-- =================================================================
-       Clean out all library files from other projects and all generated
-       files in preparation for a complete rebuild.
-
-       Needed because switching versions leaves a load of old bedework
-       generated stuff in the libraries.
-       ================================================================= -->
-  <target name="deep-clean" depends="clean">
-    <delete dir="${lib.dir}" />
-  </target>
-
-  <!-- =================================================================
-       Clean all generated files
-       ================================================================= -->
-  <target name="clean">
-    <delete dir="${dist.home}" />
-  </target>
-
-  <!-- =================================================================
-       Clean up afetr a build.
-       ================================================================= -->
-  <target name="cleanup">
-    <delete dir="${edu.rpi.cmt.empty.dir}" />
-  </target>
-
-  <!-- ========================== Base build Targets ===================
-       Here we have one target building the classes and interfaces that make
-       up the access control suite.
-       ================================================================= -->
-
-  <target name="clean-build" depends="clean,build"
-          description="Clean and compile rpiutil classes"/>
-
-  <target name="clean-build-all" depends="clean,build-all"
-          description="Clean and compile rpiutil classes"/>
-
-  <target name="build" depends="init,build-source,cleanup"
-          description="Compile rpiutil classes"/>
-
-  <target name="build-all" depends="init,build-source,cleanup"
-          description="Compile rpiutil classes"/>
 
   <target name="build-source">
-    <!-- ==================== Sources and classes ====================== -->
-
-    <fileset id="buildjar.java.sources" dir="${source.home}" >
-      <include name="edu/rpi/**/*.java"/>
-      <exclude name="edu/rpi/**/*Test.java"/>
-    </fileset>
-
-    <patternset id="base.class.patternset">
-      <include name="edu/rpi/**/*.class"/>
-    </patternset>
-
-    <!-- ==================== Build the jar ============================= -->
-
-    <ant antfile="${buildjar}" inheritRefs="true" target="build" >
-      <property name="build.jar.file"
-                location="${generated.jar.file}" />
-    </ant>
+    <build-jar module-base="${org.bedework.rpiutil.base}" 
+               jar-file="${generated.jar.file}" />
   </target>
 
   <target name="build-test">
-    <!-- ==================== Sources and classes ====================== -->
-
-    <fileset id="buildjar.java.sources" dir="${source.home}" >
-      <include name="edu/rpi/**/*Test.java"/>
-    </fileset>
-
-    <patternset id="base.class.patternset">
-      <include name="edu/rpi/**/*.class"/>
-    </patternset>
-
-    <!-- ==================== Build the jar ============================= -->
-
-    <ant antfile="${buildjar}" inheritRefs="true" target="build" >
-      <property name="build.jar.file"
-                location="${test.jar.file}" />
-    </ant>
+    <build-jar module-base="${org.bedework.rpiutiltests.base}" 
+               jar-file="${test.jar.file}" />
   </target>
 
   <!-- =================================================================
