Move calendar diff out of exsync into common classes

--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,9 @@ org.bedework.package.name=RPI utility package
 # Version we are building
 org.bedework.rpiutil.version=3.7
 
+# Versions we import
+org.bedework.bwxml.version=3.7
+
 # Name of generated jar file
 edu.rpi.cmt.rpiutil.jar=rpiutil
 
