Change icalendar schema to correct dateTime pattern and add restriction pattern to tzoffset.
Fix tzsvr to match latest schema and latest draft.

--- a/build.xml
+++ b/build.xml
@@ -63,6 +63,10 @@
     <getJar name="bw-icalschema" 
             version="${org.bedework.bwxml.version}" project="bwxml" 
             projecthome="${bedework.home}/../bwxml" />
+
+    <getJar name="bw-tzschema" 
+            version="${org.bedework.bwxml.version}" project="bwxml" 
+            projecthome="${bedework.home}/../bwxml" />
   </target>
 
   <target name="build-source" depends="build-init">
