More SOAP work. Added etoken code, started changes to diff routines to handle new update.
Added test to take updated copy of event as input

--- a/build.xml
+++ b/build.xml
@@ -67,6 +67,10 @@
     <getJar name="bw-tzschema" 
             version="${org.bedework.bwxml.version}" project="bwxml" 
             projecthome="${bedework.home}/../bwxml" />
+
+    <getJar name="bw-calws-soapschema" 
+            version="${org.bedework.bwxml.version}" project="bwxml" 
+            projecthome="${bedework.home}/../bwxml" />
   </target>
 
   <target name="build-source" depends="build-init">
