--- a/build.xml
+++ b/build.xml
@@ -9,13 +9,15 @@
 -->
 
 <project name="rpiutil" default="build">
+  <taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+
   <property environment="env"/>
   <dirname property="project.home" file="${ant.file}"/>
 
   <property file="${project.home}/build.properties" />
   
   <property name="bedework.home"
-            location="${project.home}/../.." />
+            location="${project.home}/../bedework" />
 
   <property name="build.dir" location="${bedework.home}/build"/>
 
@@ -39,11 +41,15 @@
     <property name="test.jar.file"
               location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-test-${project.version}.jar" />
   </target>
-  
-  <target name="build-init" depends="init">
-    <!-- Make sure bwxml is built -->
-    <ant antfile="${bedework.home}/../bwxml/build.xml" inheritall="false" />
 
+  <!-- =================================================================
+       Clean projects we depend on
+       ================================================================= -->
+  <target name="clean" depends="clean.bwxml">
+    <antcall target="doDeftasks.clean"/>
+  </target>
+  
+  <target name="build-init" depends="init,build.bwxml">
     <getJar name="commons-codec" version="1.3" />
     <getJar name="commons-httpclient" version="3.0" />
     <getJar name="derby" version="10.5.3.0" />
