--- a/build.xml
+++ b/build.xml
@@ -41,15 +41,8 @@
     <property name="test.jar.file"
               location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-test-${project.version}.jar" />
   </target>
-
-  <!-- =================================================================
-       Clean projects we depend on
-       ================================================================= -->
-  <target name="clean" depends="clean.bwxml">
-    <antcall target="doDeftasks.clean"/>
-  </target>
   
-  <target name="build-init" depends="init,build.bwxml">
+  <target name="build-init" depends="init">
     <getJar name="commons-codec" version="1.3" />
     <getJar name="commons-httpclient" version="3.0" />
     <getJar name="derby" version="10.5.3.0" />
