--- a/build.xml
+++ b/build.xml
@@ -14,8 +14,6 @@
   <property environment="env"/>
   <dirname property="project.home" file="${ant.file}"/>
 
-  <property file="${project.home}/build.properties" />
-  
   <property name="bedework.home"
             location="${project.home}/../bedework" />
 
@@ -25,7 +23,7 @@
 
   <deftasks/>
 
-  <projectDefs name="${org.bedework.package.name}"
+  <projectDefs name="RPI utility package"
                version="${org.bedework.rpiutil.version}" 
                subproject="true" />
 
@@ -36,19 +34,20 @@
     <property name="org.bedework.rpiutiltests.base" location="${project.home}/tests" />
 
     <property name="generated.jar.file"
-              location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-${project.version}.jar" />
+              location="${dist.home}/rpiutil-${project.version}.jar" />
 
     <property name="test.jar.file"
-              location="${dist.home}/${edu.rpi.cmt.rpiutil.jar}-test-${project.version}.jar" />
+              location="${dist.home}/rpiutil-test-${project.version}.jar" />
   </target>
   
   <target name="build-init" depends="init">
-    <getJar name="commons-codec" version="1.3" />
-    <getJar name="commons-httpclient" version="3.0" />
+    <getJar name="commons-codec" version="1.5" />
     <getJar name="derby" version="10.5.3.0" />
     <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
     <getJar name="hibernate" version="3.3.1.ga" />
+  	<getJar name="httpclient" version="4.1.2" />
+  	<getJar name="httpcore" version="4.1.2" />
     <getJar name="h2" version="1.2.130" />
     <getJar name="ical4j" version="head-20100601" />
     <getJar name="jtidy" />
@@ -56,7 +55,7 @@
     <getJar name="log4j" version="1.2.8" />
     <getJar name="lucene-core" version="2.0.0" />
     <getJar name="lucene-misc" version="2.0.0" />
-    <getJar name="servletapi" version="2.4" />
+    <getJar name="servlet-api" version="2.4" />
     <getJar name="struts" version="1.2.9" />
 
     <getJar name="jboss-j2se" version="5.1.0.GA" />
