1. Update the ischedule support:     New handler for host information with associated jboss service.     Move all support for hosts out of directory classes.     Various small fixes to ischedule     ischedule log in now done as a service to avoid some overhead
2. Fix problems with storing of resources
    Broken in many ways. Postgres blob support completely broken.
    Content type was set incorrectly
    Upgrade to hibernate 3.6 as first step.
    Had to update implementation of GenericEnumUserType in rpiutil. Used in synch.
    Changed sess.lock(o, ?)  to       sess.buildLockRequest(LockOptions.?).lock(o);
    Delete AbbrevValUserType - hibernate types have changed. Was used for venue
    Change hibernate property hibernate.jdbc.use_streams_for_binary - value is now false
    Added some support for quotas. Currently only checking resources created/updated via WebDAV PUT.
        Had to use preferences to store current quota use to avoid schema change
    Removed option to email freebusy requests. Does not make sense. Changed to an iSchedule option which implies emailing invitations.

3. Small fix to ensure we close calendar-data element when we get an exception. Response still bad but at least valid XML

--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,7 @@
     <getJar name="derby" version="10.5.3.0" />
     <getJar name="derbynet" version="10.5.3.0" />
     <getJar name="fop" />
-    <getJar name="hibernate" version="3.3.1.ga" />
+    <getJar name="hibernate" version="3.6.9.Final" />
   	<getJar name="httpclient" version="4.1.2" />
   	<getJar name="httpcore" version="4.1.2" />
     <getJar name="h2" version="1.2.130" />
