--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 	<classpathentry kind="lib" path="lib/derbynet-10.5.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/fop.jar"/>
 	<classpathentry kind="lib" path="lib/h2-1.2.130.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-3.3.1.ga.jar"/>
 	<classpathentry kind="lib" path="lib/ical4j-head-20100601.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-j2se-5.1.0.GA.jar"/>
 	<classpathentry kind="lib" path="lib/jtidy.jar"/>
@@ -23,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/httpcore-4.1.2.jar" sourcepath="/http-core-4.1"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-3.6.9.Final.jar" sourcepath="/home/douglm/drop2/db/hibernate/3.6.9.Final/hibernate-distribution-3.6.9.Final/project"/>
 	<classpathentry kind="output" path="bin/eclipse-build"/>
 </classpath>
