--- a/.classpath
+++ b/.classpath
@@ -3,18 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tests/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/derby-10.5.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/derbynet-10.5.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/fop.jar"/>
 	<classpathentry kind="lib" path="lib/h2-1.2.130.jar"/>
 	<classpathentry kind="lib" path="lib/ical4j-head-20100601.jar"/>
-	<classpathentry kind="lib" path="lib/jboss-j2se-5.1.0.GA.jar"/>
-	<classpathentry kind="lib" path="lib/jtidy.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-misc-2.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/struts-1.2.9.jar"/>
 	<classpathentry kind="lib" path="/bwxml/dist/bw-calws-soapschema-3.8.jar"/>
 	<classpathentry kind="lib" path="/bwxml/dist/bw-icalschema-3.8.jar"/>
 	<classpathentry kind="lib" path="/bwxml/dist/bw-tzschema-3.8.jar"/>
@@ -22,6 +15,11 @@
 	<classpathentry kind="lib" path="lib/httpcore-4.1.2.jar" sourcepath="/http-core-4.1"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-3.6.9.Final.jar" sourcepath="/home/douglm/drop2/db/hibernate/3.6.9.Final/hibernate-distribution-3.6.9.Final/project"/>
+	<classpathentry kind="lib" path="lib/derby-10.8.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/derbynet-10.8.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jtidy-4aug2000r7-dev.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-3.6.9.Final.jar"/>
+	<classpathentry kind="lib" path="lib/struts-core-1.3.10.jar" sourcepath="/home/douglm/.m2/repository/org/apache/struts/struts-core/1.3.10/struts-core-1.3.10-sources.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="output" path="bin/eclipse-build"/>
 </classpath>
