--- a/.classpath
+++ b/.classpath
@@ -8,9 +8,6 @@
 	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-misc-2.0.0.jar"/>
-	<classpathentry kind="lib" path="/bwxml/dist/bw-calws-soapschema-3.8.jar"/>
-	<classpathentry kind="lib" path="/bwxml/dist/bw-icalschema-3.8.jar"/>
-	<classpathentry kind="lib" path="/bwxml/dist/bw-tzschema-3.8.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.1.2.jar" sourcepath="/httpclient-4.1"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.1.2.jar" sourcepath="/http-core-4.1"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.5.jar"/>
@@ -21,5 +18,8 @@
 	<classpathentry kind="lib" path="lib/hibernate-core-3.6.9.Final.jar"/>
 	<classpathentry kind="lib" path="lib/struts-core-1.3.10.jar" sourcepath="/home/douglm/.m2/repository/org/apache/struts/struts-core/1.3.10/struts-core-1.3.10-sources.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/bw-calws-soapschema-3.9.jar"/>
+	<classpathentry kind="lib" path="lib/bw-icalschema-3.9.jar"/>
+	<classpathentry kind="lib" path="lib/bw-tzschema-3.9.jar"/>
 	<classpathentry kind="output" path="bin/eclipse-build"/>
 </classpath>
