--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,24 @@
         <artifactId>ical4j</artifactId>
         <version>head-20100601</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.1.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.1.1</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.1.1</version>
+      </dependency>
       
       <dependency>
         <groupId>jtidy</groupId>
