--- a/.classpath
+++ b/.classpath
@@ -21,7 +21,7 @@
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.1.1.jar" sourcepath="/home/douglm/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.1.1/jackson-annotations-2.1.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.1.1.jar" sourcepath="/home/douglm/drop2/java/jackson/jackson-databind-2.1.1-sources"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.2.1.jar" sourcepath="/home/douglm/.m2/repository/org/apache/httpcomponents/httpclient/4.2.1/httpclient-4.2.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.2.2.jar" sourcepath="/home/douglm/.m2/repository/org/apache/httpcomponents/httpcore/4.2.2/httpcore-4.2.2-sources.jar"/>
 	<classpathentry kind="output" path="bin/eclipse-build"/>
 </classpath>
