--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 	<classpathentry kind="lib" path="lib/derby-10.8.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/derbynet-10.8.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/jtidy-4aug2000r7-dev.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-core-3.6.9.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-3.6.9.Final.jar" sourcepath="/home/douglm/.m2/repository/org/hibernate/hibernate-core/3.6.9.Final/hibernate-core-3.6.9.Final-sources.jar"/>
 	<classpathentry kind="lib" path="lib/struts-core-1.3.10.jar" sourcepath="/home/douglm/.m2/repository/org/apache/struts/struts-core/1.3.10/struts-core-1.3.10-sources.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/bw-calws-soapschema-3.9.jar"/>
