--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
 		<maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 		<!-- Bedework Versions -->
+		<bedework.releases.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.releases.repo.url>
+		<bedework.snapshots.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.snapshots.repo.url>
 		<bw-ws.version>4.0.0-SNAPSHOT</bw-ws.version>
 		<!-- Third Party Library Versions -->
 		<commons-codec.version>1.5</commons-codec.version>
@@ -179,7 +181,7 @@
 		<repository>
 			<id>bedework.repository</id>
 			<name>Bedework Maven Repository</name>
-			<url>http://dev.bedework.org/downloads/lib/repository/</url>
+			<url>http://repository.bedework.org/maven2/</url>
 			<layout>default</layout>
 			<releases>
 				<enabled>true</enabled>
@@ -189,6 +191,19 @@
 			</snapshots>
 		</repository>
 	</repositories>
+
+	<distributionManagement>
+		<repository>
+			<id>bedework-releases-repository</id>
+			<name>Bedework Releases Repository</name>
+			<url>${bedework.releases.repo.url}</url>
+		</repository>
+		<snapshotRepository>
+			<id>bedework-snapshots-repository</id>
+			<name>Bedework Snapshots Repository</name>
+			<url>${bedework.snapshots.repo.url}</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
