--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,13 @@
 	</distributionManagement>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.4</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<!-- Specify the compiler options and settings -->
 			<plugin>
