--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -14,4 +14,17 @@
   <version>4.0.0-SNAPSHOT</version>
 
   <packaging>jar</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-ws-tzsvr</artifactId>
+      <version>${bw-ws.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-ws-calws-soap</artifactId>
+      <version>${bw-ws.version}</version>
+    </dependency>
+  </dependencies>
 </project>
