--- a/bw-util-servlet/pom.xml
+++ b/bw-util-servlet/pom.xml
@@ -19,7 +19,17 @@
     <!-- Bedework -->
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-util-config</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-jmx</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
