--- a/bw-util-security/pom.xml
+++ b/bw-util-security/pom.xml
@@ -15,4 +15,13 @@
   <version>4.0.0-SNAPSHOT</version>
 
   <packaging>jar</packaging>
+
+  <dependencies>
+    <!-- Bedework -->
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-jmx</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 </project>
