--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git://github.com/Bedework/bw-util.git</connection>
-    <developerConnection>scm:git:git://github.com/Bedework/bw-util.git</developerConnection>
+    <connection>scm:git:git@github.com:Bedework/bw-util.git</connection>
+    <developerConnection>scm:git:git@github.com:Bedework/bw-util.git</developerConnection>
     <url>https://github.com/Bedework/bw-util</url>
   </scm>
 
