--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <!-- Bedework Versions -->
     <bedework.releases.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.releases.repo.url>
     <bedework.snapshots.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.snapshots.repo.url>
-    <bw-ws.version>4.0.0-SNAPSHOT</bw-ws.version>
+    <bw-ws.version>4.0.0</bw-ws.version>
     <!-- Third Party Library Versions -->
     <commons-codec.version>1.5</commons-codec.version>
     <jackson.version>2.3.1</jackson.version>
@@ -28,7 +28,7 @@
     <struts.version>1.3.10</struts.version>
     <lucene.version>2.0.0</lucene.version>
     <junit.version>4.8.2</junit.version>
-    <ical4j.version>1.0-BW-SNAPSHOT</ical4j.version>
+    <ical4j.version>1.0-BW</ical4j.version>
     <log4j.version>1.2.15</log4j.version>
   </properties>
 
