--- a/bw-util-struts/pom.xml
+++ b/bw-util-struts/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.0</version>
+    <version>4.0.1-SNAPSHOT</version>
   </parent>
 
   <groupId>org.bedework</groupId>
   <artifactId>bw-util-struts</artifactId>
-  <version>4.0.0</version>
+  <version>4.0.1-SNAPSHOT</version>
 
   <packaging>jar</packaging>
 
