Changes after release 4.0 of access, util, ws, webdav, caldav

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <!-- Bedework Versions -->
     <bedework.releases.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.releases.repo.url>
     <bedework.snapshots.repo.url>scp://dev.bedework.org/data/repository/maven/maven2</bedework.snapshots.repo.url>
-    <bw-ws.version>4.0.0</bw-ws.version>
+    <bw-ws.version>4.0.1-SNAPSHOT</bw-ws.version>
     <!-- Third Party Library Versions -->
     <commons-codec.version>1.5</commons-codec.version>
     <jackson.version>2.3.1</jackson.version>
