--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <struts.version>1.3.10</struts.version>
     <lucene.version>2.0.0</lucene.version>
     <junit.version>4.8.2</junit.version>
-    <ical4j.version>1.0-BW</ical4j.version>
+    <ical4j.version>1.1-BW-SNAPSHOT</ical4j.version>
     <log4j.version>1.2.15</log4j.version>
   </properties>
 
