--- a/bw-util-deployment/pom.xml
+++ b/bw-util-deployment/pom.xml
@@ -13,4 +13,19 @@
   <version>4.0.1-SNAPSHOT</version>
 
   <packaging>jar</packaging>
+
+  <dependencies>
+    <!-- Bedework -->
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-args</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-xml</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 </project>
