Bring the 4.0 version up to date with the post deploy process from 3.10.

--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -24,5 +24,10 @@
       <artifactId>bw-ws-calws-soap</artifactId>
       <version>${bw-ws.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-misc</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
