--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <lucene.version>2.0.0</lucene.version>
     <junit.version>4.8.2</junit.version>
     <ical4j.version>1.1-BW-SNAPSHOT</ical4j.version>
+    <ical4j-vcard.version>0.9.6-BW-SNAPSHOT</ical4j-vcard.version>
     <log4j.version>1.2.15</log4j.version>
   </properties>
 
@@ -121,6 +122,11 @@
       <groupId>net.fortuna.ical4j</groupId>
       <artifactId>ical4j</artifactId>
       <version>${ical4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mnode.ical4j</groupId>
+      <artifactId>ical4j-vcard</artifactId>
+      <version>${ical4j-vcard.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
