--- a/bw-util-vcard/pom.xml
+++ b/bw-util-vcard/pom.xml
@@ -42,6 +42,11 @@
       <version>${ical4j.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.mnode.ical4j</groupId>
+      <artifactId>ical4j-vcard</artifactId>
+      <version>${ical4j-vcard.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>${jackson.version}</version>
