--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <lucene.version>2.0.0</lucene.version>
     <junit.version>4.8.2</junit.version>
     <ical4j.version>1.1-BW-SNAPSHOT</ical4j.version>
-    <ical4j-vcard.version>0.9.6-BW-SNAPSHOT</ical4j-vcard.version>
+    <ical4j-vcard.version>0.9.6a-BW-SNAPSHOT</ical4j-vcard.version>
     <log4j.version>1.2.15</log4j.version>
   </properties>
 
