Add auto-killer to the system configuration jmx.
If auto-kill minutes is non-zero will kill hanging transactions some time after that interval.

--- a/bw-util-deployment/pom.xml
+++ b/bw-util-deployment/pom.xml
@@ -24,6 +24,12 @@
 
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-util-dav</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-xml</artifactId>
       <version>${project.version}</version>
     </dependency>
