Many changes from 3.10-dev - mostly related to fixing synch of public events.
Also changes to try to stop duplication of auth user entries.

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>bw-ws-calws-soap</artifactId>
       <version>${bw-ws.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-ws-icalendar</artifactId>
+      <version>${bw-ws.version}</version>
+    </dependency>
     <!-- Third Party Libraries -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
